* Minor code cleanup and add missing semicolon to Fuse.Ajax.Responder.register(). [Diego Perini, jddalton]

* Ensure the catch-all of Fuse.Object.hasKey() won't error if the object doesn't have a constructor property. [Garrett Smith, jddalton]

* Rename all occurrences of `.Plugin` to `.plugin`. [jddalton, kangax]

* Rename Fuse.Exception to Fuse.Console and add support Opera and Jaxer consoles. [FuseJS LH #52] [jddalton, Mark Caudill, kangax]

* Remove `strict` flag from the `contains` methods and allow native/sandboxed object instances to match primitive values. [jddalton]

* Remove lingering Fuse.Array#clone dependency from the Fuse.Array#grep addition. [jddalton]

* Fix leaked variable `name` that caused TaskSpeed to error in WebKit based browsers. [Diego Perini]

* Refactor codebase to reduce file dependencies and allow more custom build variations. [jddalton]

* Cleanup codebase and optimize Element class. [jddalton, kangax]
    - Optimized Fuse.Util.$
    - Optimized insertableNodeTypes
    - Optimized Element.addMethods()
    - Fixed global var leaks in fusebox.js
    - Stoped wrapping `toString` and `valueOf` on sandboxed natives
    - Removed SafariMobile browser sniff from Feature('ELEMENT_SPECIFIC_EXTENSIONS')
    - Renamed Element._getContentFromAnonymousElement() to Element._getFragmentFromString()
    - Made Element.extend.refresh() private

* Rename Fuse.Browser to Fuse.Env to include other environments like Jaxer and Adobe AIR. [FuseJS LH #44] [jddalton, kangax]

* Reduce object property lookups by creating private variables and perform some code cleanup. [jddalton]

* Fix bug in Fuse.Object.isSameOrigin() that allowed urls ending with the same domain name to pass. [jddalton]

* Ensure Fuse.Object.toQueryString() only enumerates over an object's own direct properties. [Prototype LH #126] [jddalton, kitsg, Peter Gyongyosi]

* unit test: Add option to dynamically set the Fuse.debug flag in the test template. [jddalton]
