@@ -12,9 +12,22 @@ body {
   margin-bottom: 2em;
 }
 
+#fusejs-console {
+  margin: 10px 0 0 0;
+  padding: 0;
+  overflow: auto;
+  height: 100px;
+  border: 1px solid #ccc;
+}
+
+#fusejs-console pre {
+  margin: 0;
+  padding: 10px 10px 0 10px;
+  font-size: 13px;
+}
+
 .logsummary {
-  margin-top: 1em;
-  margin-bottom: 1em;
+  margin: 1em 0 1em 0;
   padding: 1ex;
   border: 1px solid #000;
   font-weight: bold;
